benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_Compare_CompareUnequal_iter3_error.log
=== Verification Error - Iteration 3 ===
File: benchmarks/verus/bignum/files/bignum_Compare_CompareUnequal.rs
Time: 2025-09-15 10:57:11

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:41:14
   |
41 |         if s@[start] != '0' {
   |              ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:56:27
   |
56 |             result.push(s@[j]);
   |                           ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:102:14
    |
102 |         if s@[start] != '0' {
    |              ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:117:27
    |
117 |             result.push(s@[j]);
    |                           ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:150:30
    |
150 |             let c1 = s1_norm@[i];
    |                              ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:151:30
    |
151 |             let c2 = s2_norm@[i];
    |                              ^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0608`.

--------------------------------------------------------------------------------

Additional Output:
error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:41:14
   |
41 |         if s@[start] != '0' {
   |              ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:56:27
   |
56 |             result.push(s@[j]);
   |                           ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:102:14
    |
102 |         if s@[start] != '0' {
    |              ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:117:27
    |
117 |             result.push(s@[j]);
    |                           ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:150:30
    |
150 |             let c1 = s1_norm@[i];
    |                              ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:151:30
    |
151 |             let c2 = s2_norm@[i];
    |                              ^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0608`.
